# wikipedia-tui

./: Cargo.toml
src/: main.rs
src/app/: app.rs  mod.rs
src/request/: mod.rs  request.rs  url.rs
src/ui/: mod.rs  ui.rs
src/util/: event.rs  key.rs  mod.rs  state.rs
