[package]
name = "wikipedia-tui"
version = "0.1.0"
authors = ["Eric <e.lim0322@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.17"
lazy_static = "1.4.0"
reqwest = { version = "0.10.6", features = ["blocking"] }
regex = "1.3.9"
tokio = { version = "0.2.5", features = ["full"] }
tui = { version = "0.9", default-features = false, features = ['crossterm'] }

[[bin]]
name = "wiki"
path = "src/main.rs"
